--- a/css/tailwind/input.css
+++ b/css/tailwind/input.css
@@ -20,3 +20,9 @@
 .menu li a{
   @apply hover:text-blue-500
 }
+.bg-black-50{
+background: rgb(0 0 0 / 50%);
+}
+.owl-theme .item{
+  max-height: 400px;
+}
