--- a/css/tailwind/input.css
+++ b/css/tailwind/input.css
@@ -10,7 +10,16 @@
   @apply text-7xl text-chiThao-600 bg-yellow-400 font-black
 }
 .btn{
-  @apply bg-blue-600 text-white px-4 py-2 rounded
+  @apply bg-blue-600 text-white px-4 rounded h-[40px]
+}
+.input{
+  @apply h-[40px] px-2 border-gray-400 border overflow-hidden rounded
+}
+.input-search{
+  border-right: none;
+  border-top-right-radius: unset!important;
+  border-bottom-right-radius: unset!important;
+  @apply input w-32 sm:w-auto
 }
 
 .menu{
@@ -25,4 +34,10 @@ background: rgb(0 0 0 / 50%);
 }
 .owl-theme .item{
   max-height: 400px;
+}
+[x-cloak] { display: none; }
+
+/* chitiet-sanpham */
+.chitiet-slider-item{
+  @apply focus:outline-none w-full rounded-lg h-24 md:h-32 bg-gray-100 flex items-center justify-center ring-2 ring-indigo-300 ring-inset border-4 overflow-hidden
 }
